Changed title tag, removed debugging puts

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,7 @@
   <script src="/jquery-ui-1.10.4/ui/minified/jquery-ui.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title>@DandyDanny's Awesome Sinatra Project</title>
+  <title>Tweet Ahora 2</title>
 </head>
 <body>
   <%= yield %>
