Changed dos to 2

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
     # user logged-in, we should show the sign-in button.
   %>
 <div class="container">
-  <h1>Tweet Ahora Dos - La Tentación Prohibida</h1>
+  <h1>Tweet Ahora 2 - La Tentación Prohibida</h1>
   <p></p>
   <% if @user %>
     <div>
