--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,6 +14,8 @@
         <button id="submit-button">Tweet as <%= @user.username %></button>
         <p>Green: success, Red: error, Yellow: in-progress</p>
       </form>
+      <div class="status">
+      </div>
       <p>
         <button><a href="/sign_out">Sign Out</a></button>
       </p>
